--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
-    "render": "npm run install && npm run build"
-
+    "render": "concurrently \"cd server && node server.js\" \"cd client && npm run dev\""
   },
   "keywords": [],
   "author": "",
