--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.4.5",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.8",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
@@ -32,8 +35,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.8",
     "vite": "^4.4.5"
   }
 }
