--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.4.5",
     "@apollo/server": "^4.7.1",
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.1",
