--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.4.5",
+  },
   "devDependencies": {
     "concurrently": "^5.1.0"
   }
