--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.5",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
