--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,12 @@
     "tailwindcss": "^3.4.8",
     "socket.io-client": "^4.7.5",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
