--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.5"
-  },
-  "devDependencies": {
+    "vite": "^4.4.5",
     "concurrently": "^5.1.0"
   }
 }
